finished with triples and kg creation

--- a/changes.txt
+++ b/changes.txt
@@ -140,3 +140,9 @@ SELECT DISTINCT ?term WHERE {
 } and got 240 results where it contains "file:/uploaded/generated/..."
 
 - I forgot to add Model Card Report Ontology in triple_creation.ipynb file so i did these changes to The modified code introduces ontology integration by adding owlready2 and rdflib libraries to load and work with a predefined ontology (mcro.owl), which provides standardized classes and predicates for knowledge graph construction. A constant ONTOLOGY_BASE is defined to reference ontology terms consistently.The get_dynamic_mapping function was renamed to get_ontology_mapping and now checks for existing classes in the loaded ontology instead of dynamically generating URIs. It uses mcro:-prefixed terms (e.g., mcro:Transformer) when ontology classes exist and falls back to custom class names (e.g., mcro:CustomArchitecture) when no match is found.The entity extraction prompt was significantly expanded to enforce stricter JSON formatting rules, require ontology URIs in responses (e.g., "mcro:ImageNet-1k"), and mandate new fields like modelType, languages, and pretrainedModel. It also specifies handling of URLs, escaped quotes, and nested JSON structures for metrics.The base type for models was changed from a generic "Model" to mcro:Model, and all class references now use mcro:Component as a superclass. Redundant dul:hasParameterDataValue triples were removed in cases where they added unnecessary complexity.Unused imports (datetime, string, traceback) were removed. Error handling for ontology-specific issues was added, and JSON response cleaning was improved with better regex patterns to remove markdown artifacts.The extraction prompt now explicitly references the ontology URI, provides stricter formatting rules (e.g., array syntax, escaped quotes), and includes a nested JSON example for metrics to guide the LLM's output structure.URIs are now constructed with greater consistency, using ontology namespaces (e.g., mcro:Transformer) and better handling of term capitalization to align with semantic web standards.
+- Did more changes in triple_creation.ipynb , URIs now include the full model provenance (e.g., model_timm_mobilenetv3_small_100.lamb_in1k) and follow a standardized format (mcro:class_Value_modelSuffix), ensuring uniqueness and traceability. Properly distinguishes between classes (e.g., mcro:MobileNetV3) and instances (e.g., mcro:MobileNetV3_timm_mobilenetv3_small_100.lamb_in1k), aligning with OWL semantics. Now uses XSD data types (e.g., "true"^^xsd:boolean) for computational compatibility. Reuses ontology classes where possible (e.g., mcro:languages_Python_timm_mobilenetv3_small_100.lamb_in1k) and ensures all entities include the model ID for context. Eliminates self-referential triples and enforces proper class-instance relationships. Uses strict OBO-style naming (e.g., mcro:model_*, mcro:architecture_*) for uniformity. Added dul:hasParameterDataValue to preserve human-readable labels (e.g., storing "MobileNetV3" as a literal). Ensured all entities inherit from mcro:Component via rdfs:subClassOf.
+- Did more changes in triple_creation.ipynb, Properly encodes complex data structures in URIs using urllib.parse.quote. Stores dictionaries/lists as JSON literals instead of URIs. Checks URI validity before adding to the graph. Properly decodes URL-encoded fragments when converting to prefix notation.
+- So i feel like im done with triple_creation.ipynb. Now moving on model_card_knowledge.ipynb, i edited base uri as i added "mcro", then i Stop encoding valid HTTP URIs, as this alters their structure and breaks references, enhance the code a bit so it parse triples efficiently. 
+- added new .ttl file with mcro base uri file in graphdb and deleted older versions
+- tested files both with graphdb and protege its working .
+- 
