--- a/model_card_knowlege.ipynb
+++ b/model_card_knowlege.ipynb
@@ -5,14 +5,23 @@
    "execution_count": 1,
    "id": "f9547301-c97e-4a28-a886-6b8bdccbcc2f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scratch-node/20230112.2646381/ipykernel_491020/1174850883.py:152: UserWarning: Code: json is not defined in namespace XSD\n",
+      "  return Literal(obj_str, datatype=XSD.json)\n"
+     ]
+    }
+   ],
    "source": [
-    "from rdflib import Graph, URIRef, Literal, Namespace\n",
-    "from rdflib.namespace import RDF, RDFS, DCTERMS, VOID\n",
+    "from rdflib import Graph, URIRef, Literal, BNode\n",
+    "from rdflib.namespace import RDF, RDFS, XSD, DCTERMS, VOID, OWL\n",
+    "from rdflib.namespace import Namespace\n",
     "import json\n",
-    "import re\n",
+    "import urllib.parse\n",
     "\n",
-    "# Custom namespaces\n",
     "MCRO = Namespace(\"http://purl.obolibrary.org/obo/mcro.owl#\")\n",
     "DUL = Namespace(\"http://www.ontologydesignpatterns.org/ont/dul/DUL.owl#\")\n",
     "\n",
@@ -21,102 +30,178 @@
     "        return json.load(f)\n",
     "\n",
     "def create_ttl(triples):\n",
-    "    g = Graph(identifier=URIRef(\"http://purl.obolibrary.org/obo/mcro.owl\"))\n",
+    "    g = Graph(identifier=MCRO.ModelCardGraph)\n",
     "    \n",
     "    # Bind namespaces\n",
     "    g.bind(\"mcro\", MCRO)\n",
     "    g.bind(\"rdf\", RDF)\n",
     "    g.bind(\"rdfs\", RDFS)\n",
+    "    g.bind(\"owl\", OWL)\n",
+    "    g.bind(\"xsd\", XSD)\n",
     "    g.bind(\"dul\", DUL)\n",
     "    g.bind(\"dct\", DCTERMS)\n",
     "    g.bind(\"void\", VOID)\n",
     "\n",
-    "    # First pass: collect classes\n",
-    "    classes = set()\n",
+    "    # Process class hierarchy\n",
+    "    classes = {}\n",
     "    for triple in triples:\n",
-    "        if triple['p'] == 'rdf:type':\n",
-    "            classes.add(triple['o'])\n",
-    "        elif triple['p'] == 'rdfs:subClassOf':\n",
-    "            classes.add(triple['o'])\n",
-    "            classes.add(triple['s'])\n",
+    "        s, p, o = triple['s'], triple['p'], triple['o']\n",
+    "        if p == 'rdf:type' and o.startswith(str(MCRO)):\n",
+    "            cls_uri = process_subject(s)\n",
+    "            classes[cls_uri] = {'type': 'Class'}\n",
+    "        elif p == 'rdfs:subClassOf':\n",
+    "            subj_uri = process_subject(s)\n",
+    "            super_uri = process_object(o, g)\n",
+    "            \n",
+    "            if subj_uri not in classes:\n",
+    "                classes[subj_uri] = {}\n",
+    "            classes[subj_uri]['super'] = super_uri\n",
     "\n",
-    "    # Process all triples\n",
-    "    for triple in triples:\n",
-    "        s = process_term(triple['s'], classes)\n",
-    "        p = process_predicate(triple['p'])\n",
-    "        o = process_object(triple['o'], classes)\n",
+    "    # Add class declarations with hierarchy\n",
+    "    for cls_uri, data in classes.items():\n",
+    "        g.add((cls_uri, RDF.type, RDFS.Class))\n",
     "        \n",
-    "        # Force dul:hasParameterDataValue to literals\n",
-    "        if p == DUL.hasParameterDataValue:\n",
-    "            o = Literal(str(o)) if not isinstance(o, Literal) else o\n",
+    "        if cls_uri == MCRO.Component:\n",
+    "            g.add((cls_uri, RDFS.subClassOf, OWL.Thing))\n",
+    "        elif cls_uri == MCRO.Model:\n",
+    "            g.add((cls_uri, RDFS.subClassOf, MCRO.Component))\n",
+    "        else:\n",
+    "            if 'super' in data:\n",
+    "                g.add((cls_uri, RDFS.subClassOf, data['super']))\n",
+    "            else:\n",
+    "                g.add((cls_uri, RDFS.subClassOf, MCRO.Model))\n",
     "\n",
-    "        g.add((s, p, o))\n",
-    "    \n",
+    "    # Process all triples with semantic enhancements\n",
+    "    for triple in triples:\n",
+    "        s = process_subject(triple['s'])\n",
+    "        p = process_predicate(triple['p'])\n",
+    "        o = process_object(triple['o'], g)\n",
+    "        \n",
+    "        # Handle special cases for semantic enrichment\n",
+    "        if p == DUL.hasParameterDataValue:\n",
+    "            # Convert generic parameters to specific properties\n",
+    "            if \"name\" in str(s).lower():\n",
+    "                p = MCRO.hasName\n",
+    "            elif \"accuracy\" in str(s).lower():\n",
+    "                p = MCRO.hasAccuracy\n",
+    "            elif \"precision\" in str(s).lower():\n",
+    "                p = MCRO.hasPrecision\n",
+    "            elif \"recall\" in str(s).lower():\n",
+    "                p = MCRO.hasRecall\n",
+    "            elif \"f1score\" in str(s).lower():\n",
+    "                p = MCRO.hasF1Score\n",
+    "                \n",
+    "        # Add structured metrics\n",
+    "        if isinstance(o, Literal) and isinstance(o.value, str) and o.value.startswith('{'):\n",
+    "            # Handle JSON metrics by creating blank nodes\n",
+    "            metric_node = BNode()\n",
+    "            g.add((s, p, metric_node))\n",
+    "            g.add((metric_node, RDF.type, MCRO.Metric))\n",
+    "            \n",
+    "            data = json.loads(o.value)\n",
+    "            for key, values in data.items():\n",
+    "                category_node = BNode()\n",
+    "                g.add((metric_node, MCRO.hasCategory, category_node))\n",
+    "                g.add((category_node, MCRO.categoryName, Literal(key)))\n",
+    "                \n",
+    "                for k, v in values.items():\n",
+    "                    pred = getattr(MCRO, f\"has{k.capitalize()}\", None)\n",
+    "                    if pred:\n",
+    "                        g.add((category_node, pred, Literal(v)))\n",
+    "            continue\n",
+    "        \n",
+    "        # Add units where applicable\n",
+    "        if isinstance(o, Literal) and o.datatype == XSD.float:\n",
+    "            unit_pred = getattr(MCRO, f\"{p.split('#')[-1]}Unit\", None)\n",
+    "            if unit_pred:\n",
+    "                g.add((s, unit_pred, Literal(\"percent\")))\n",
+    "        \n",
+    "        if isinstance(o, list):\n",
+    "            for obj in o:\n",
+    "                g.add((s, p, obj))\n",
+    "        else:\n",
+    "            g.add((s, p, o))\n",
+    "\n",
+    "    # Validate syntax\n",
+    "    try:\n",
+    "        g.parse(data=g.serialize(format='turtle'), format='turtle')\n",
+    "    except Exception as e:\n",
+    "        print(f\"Validation error: {e}\")\n",
+    "        raise\n",
+    "\n",
     "    return g\n",
     "\n",
-    "def sanitize_uri(term):\n",
-    "    return re.sub(r'[^a-zA-Z0-9-]', '', term).replace(' ', '_')\n",
-    "\n",
-    "def process_term(term, classes):\n",
-    "    if term.startswith('http'):\n",
-    "        return URIRef(term)\n",
-    "    elif term.startswith('mcro:'):\n",
-    "        return MCRO[term.split('mcro:')[-1]]\n",
-    "    elif term.startswith('dul:'):\n",
-    "        return DUL[term.split('dul:')[-1]]\n",
-    "    elif term in classes:\n",
-    "        return MCRO[sanitize_uri(term)]\n",
+    "def process_subject(subject_str):\n",
+    "    if subject_str.startswith(str(MCRO)):\n",
+    "        local_part = subject_str.split('#')[-1]\n",
+    "        return MCRO[local_part.replace(' ', '_')]\n",
+    "    elif subject_str.startswith('http'):\n",
+    "        return URIRef(subject_str)\n",
     "    else:\n",
-    "        return MCRO[sanitize_uri(term)]\n",
+    "        return BNode(subject_str)\n",
     "\n",
     "def process_predicate(predicate_str):\n",
-    "    if predicate_str.startswith('http'):\n",
-    "        return URIRef(predicate_str)\n",
-    "    elif predicate_str.startswith('rdf:type'):\n",
-    "        return RDF.type\n",
-    "    elif predicate_str.startswith('rdfs:subClassOf'):\n",
-    "        return RDFS.subClassOf\n",
-    "    elif predicate_str.startswith('dul:'):\n",
-    "        return DUL[predicate_str.split('dul:')[-1]]\n",
-    "    elif predicate_str.startswith('mcro:'):\n",
-    "        return MCRO[predicate_str.split('mcro:')[-1]]\n",
+    "    if predicate_str.startswith(str(MCRO)):\n",
+    "        local_part = predicate_str.split('#')[-1]\n",
+    "        return MCRO[local_part.replace(' ', '_')]\n",
+    "    \n",
+    "    if ':' in predicate_str:\n",
+    "        prefix, local = predicate_str.split(':', 1)\n",
+    "        prefix = prefix.lower()\n",
+    "        if prefix == 'rdf':\n",
+    "            return getattr(RDF, local)\n",
+    "        elif prefix == 'rdfs':\n",
+    "            return getattr(RDFS, local)\n",
+    "        elif prefix == 'xsd':\n",
+    "            return getattr(XSD, local)\n",
+    "        elif prefix == 'dul':\n",
+    "            return DUL[local]\n",
+    "        elif prefix == 'owl':\n",
+    "            return getattr(OWL, local)\n",
+    "        elif prefix == 'mcro':\n",
+    "            return MCRO[local.replace(' ', '_')]\n",
+    "        else:\n",
+    "            return URIRef(predicate_str)\n",
     "    else:\n",
-    "        # Fallback for known mappings\n",
-    "        return {\n",
-    "            \"hasLibraries\": MCRO.hasLibraries,\n",
-    "            \"hasDatasets\": VOID.Dataset,\n",
-    "            \"hasModelSizes\": DCTERMS.extent,\n",
-    "            \"hasLicense\": DCTERMS.license,\n",
-    "            \"hasAuthors\": DCTERMS.creator,\n",
-    "            \"hasInputFormat\": DUL.hasParameterDataValue,\n",
-    "            \"hasTrainingData\": DUL.hasParameterDataValue,\n",
-    "            \"hasArchitecture\": DUL.hasComponentPart,\n",
-    "            \"hasPreprocessing\": DUL.hasParameterDataValue,\n",
-    "            \"hasHardware\": DCTERMS.requires\n",
-    "        }.get(predicate_str, MCRO[sanitize_uri(predicate_str)])\n",
+    "        return MCRO[predicate_str.replace(' ', '_')]\n",
     "\n",
-    "def process_object(obj_str, classes):\n",
+    "def process_object(obj_str, graph):\n",
+    "    if isinstance(obj_str, str) and obj_str.startswith('{'):\n",
+    "        return Literal(obj_str, datatype=XSD.json)\n",
+    "    \n",
+    "    if isinstance(obj_str, str) and '^^' in obj_str:\n",
+    "        value, dtype = obj_str.rsplit('^^', 1)\n",
+    "        value = value.strip('\"')\n",
+    "        return Literal(value, datatype=URIRef(dtype.strip()))\n",
+    "    \n",
+    "    if obj_str.lower() in ('true', 'false'):\n",
+    "        return Literal(obj_str.lower() == 'true', datatype=XSD.boolean)\n",
+    "    \n",
+    "    if obj_str.replace('.', '', 1).isdigit():\n",
+    "        return Literal(float(obj_str) if '.' in obj_str else int(obj_str))\n",
+    "    \n",
+    "    if obj_str.startswith(str(MCRO)):\n",
+    "        local_part = obj_str.split('#')[-1]\n",
+    "        return MCRO[local_part.replace(' ', '_')]\n",
+    "    \n",
     "    if obj_str.startswith('http'):\n",
     "        return URIRef(obj_str)\n",
-    "    elif obj_str.startswith('{'):\n",
-    "        try:\n",
-    "            # Handle JSON strings with single quotes\n",
-    "            data = json.loads(obj_str.replace(\"'\", '\"'))\n",
-    "            return Literal(json.dumps(data), datatype=RDF.JSON)\n",
-    "        except json.JSONDecodeError:\n",
-    "            return Literal(obj_str)\n",
-    "    elif obj_str.startswith('mcro:'):\n",
-    "        return MCRO[obj_str.split('mcro:')[-1]]\n",
-    "    elif obj_str in classes:\n",
-    "        return MCRO[sanitize_uri(obj_str)]\n",
-    "    else:\n",
-    "        return Literal(obj_str)\n",
+    "    \n",
+    "    return Literal(obj_str)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    triples = load_triples(\"ontology_aligned_triples.json\")\n",
+    "    triples = load_triples(\"triples.json\")\n",
     "    graph = create_ttl(triples)\n",
     "    graph.serialize(destination=\"model_card.ttl\", format=\"turtle\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e96009d4-cf8e-41bd-b63f-fc7a7916ece5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
