added NL to SPARQL and viceversa

--- a/changes.txt
+++ b/changes.txt
@@ -145,4 +145,6 @@ SELECT DISTINCT ?term WHERE {
 - So i feel like im done with triple_creation.ipynb. Now moving on model_card_knowledge.ipynb, i edited base uri as i added "mcro", then i Stop encoding valid HTTP URIs, as this alters their structure and breaks references, enhance the code a bit so it parse triples efficiently. 
 - added new .ttl file with mcro base uri file in graphdb and deleted older versions
 - tested files both with graphdb and protege its working .
-- 
+- Now the next part is : text to sparql and sparql to text both using llm - for this I am using graphdb again and gonna use auto-kgql approach first for now I used paper "Few-shot learning or RAG in LLM-based text-to-SPARQL? Why not both? By Caio Viktor S" used section 3-b of the paper to create a question normalisation and kg subgraph retrieval (it replicate auto kgqa's sliding window + relevance scoring which is done in section 3-b.2 of paper) and it return verbalised triples from the kg subgraph and named this file as"kgqa_online.ipynb"
+- in "kgqa_online.ipynb" it implement search_kg_index() with t-box/a-box indexes, added error handling (it will retry api call and sparql validation), it also cache frequently used subgraphs, added subgraph retrieval in get_kg_subgraph() function (RAG), Few shot learning, added llm (gemini).
+- in kgqa_online.ipynb : added special handling for mcro:has* property as it was giving error, include properties with or without labels/comments, added handling for dul:hasParameterDataValue literals, added rules for parameter literals and relationships, more structured output explanations and special handling for model specific metrics 
