--- a/triple_creation.ipynb
+++ b/triple_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6e797a6f-09e2-4d91-b375-7fe3993600bf",
    "metadata": {},
    "outputs": [
@@ -601,7 +601,7 @@
     "{text[:10000]}\"\"\"\n",
     "        \n",
     "        genai.configure(api_key=GTOKEN)\n",
-    "        model = genai.GenerativeModel('gemini-1.5-pro-latest')\n",
+    "        model = genai.GenerativeModel('gemini-1.5-flash')\n",
     "        response = model.generate_content(prompt)\n",
     "        json_str = response.text.strip().replace(\"```json\", \"\").replace(\"```\", \"\")\n",
     "        return json.loads(json_str)\n",
