added big dataset and clean kgqa

--- a/kgqa.ipynb
+++ b/kgqa.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "067490e1",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
     "\n",
     "# Initialize Knowledge Graph\n",
     "kg = Graph()\n",
-    "kg.parse(\"model_card.ttl\", format=\"turtle\")  \n",
+    "kg.parse(\"model_card-3.ttl\", format=\"turtle\")  \n",
     "\n",
     "# Configure Gemini API\n",
     "GTOKEN = \"AIzaSyDQQY8FmOW6erFivgwsHjAdf419PYddNis\"\n",
@@ -50,9 +50,18 @@
     "PREFIX dul: <http://www.ontologydesignpatterns.org/ont/dul/DUL.owl#>\n",
     "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
     "PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>\n",
-    "\"\"\"\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed448e0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "# Cell 3: Text to SPARQL Conversion\n",
+    "# Text to SPARQL Conversion\n",
     "def generate_sparql(question: str) -> str:\n",
     "    \"\"\"Convert natural language question to SPARQL query\"\"\"\n",
     "    # Get schema context information\n",
