fixed delimiter error in prompt of triple_creation.ipynb

--- a/triple_creation.ipynb
+++ b/triple_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "6e797a6f-09e2-4d91-b375-7fe3993600bf",
    "metadata": {},
    "outputs": [
@@ -12,18 +12,16 @@
      "text": [
       "=== TRIPLE GENERATION STARTED ===\n",
       "Processed 1/10: timm/mobilenetv3_small_100.lamb_in1k\n",
-      "Generated 24 triples from 6 entities\n",
-      "Extraction error: Expecting ',' delimiter: line 46 column 3 (char 775)\n",
-      "Skipping openai/clip-vit-large-patch14 - no entities found\n",
-      "Extraction error: Expecting value: line 116 column 5 (char 2850)\n",
-      "Skipping Bingsu/adetailer - no entities found\n",
+      "Generated 13 triples from 4 entities\n",
+      "Processed 6/10: openai/clip-vit-large-patch14\n",
+      "Generated 121 triples from 6 entities\n",
       "\n",
       "=== STATISTICS ===\n",
       "Total models processed: 10\n",
-      "Total triples generated: 280\n",
+      "Total triples generated: 392\n",
       "\n",
       "=== COMPLETED ===\n",
-      "Final triple count: 280\n"
+      "Final triple count: 392\n"
      ]
     }
    ],
@@ -64,17 +62,38 @@
     "\n",
     "Valid categories include: Model, Dataset, Metric, TrainingProcedure, EvaluationResult, Configuration, etc.\n",
     "\n",
-    "Example response (strictly aligned): \n",
-    "{{\"architecture\": \"Transformer\", \"dataset\": \"Wikipedia\", \"evaluationScore\": \"0.85\"}}\n",
+    "Return a valid JSON object ONLY, no explanation. Example:\n",
+    "{{\"dataset\": \"Wikipedia\", \"architecture\": \"Transformer\"}}\n",
     "\n",
     "Model card text:\n",
     "{text[:10000]}\"\"\"\n",
-    "        \n",
+    "\n",
     "        genai.configure(api_key=GTOKEN)\n",
-    "        model = genai.GenerativeModel('gemini-1.5-flash')\n",
+    "        model = genai.GenerativeModel('gemini-2.0-flash')\n",
     "        response = model.generate_content(prompt)\n",
-    "        json_str = response.text.strip().replace(\"```json\", \"\").replace(\"```\", \"\")\n",
+    "\n",
+    "        # Extract JSON block\n",
+    "        json_str = response.text.strip()\n",
+    "        if \"```json\" in json_str:\n",
+    "            json_str = json_str.split(\"```json\")[1].split(\"```\")[0].strip()\n",
+    "        \n",
+    "        # Basic JSON sanity check\n",
+    "        if not json_str.startswith(\"{\") or not json_str.endswith(\"}\"):\n",
+    "            raise ValueError(\"Invalid JSON structure\")\n",
+    "\n",
+    "        # Try parsing directly\n",
     "        return json.loads(json_str)\n",
+    "    \n",
+    "    except json.JSONDecodeError as je:\n",
+    "        print(f\"JSON Decode Error: {str(je)} - attempting repair\")\n",
+    "        try:\n",
+    "            # Attempt to fix common JSON issues\n",
+    "            json_str = re.sub(r',\\s*}', '}', json_str)  # remove trailing commas\n",
+    "            json_str = re.sub(r',\\s*]', ']', json_str)\n",
+    "            return json.loads(json_str)\n",
+    "        except Exception as je2:\n",
+    "            print(f\"Repair failed: {str(je2)}\")\n",
+    "            return {}\n",
     "    \n",
     "    except Exception as e:\n",
     "        print(f\"Extraction error: {str(e)}\")\n",
