--- a/triple_creation.ipynb
+++ b/triple_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "6e797a6f-09e2-4d91-b375-7fe3993600bf",
    "metadata": {},
    "outputs": [
@@ -10,18 +10,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== TRIPLE GENERATION STARTED ===\n",
-      "Processed 1/10: timm/mobilenetv3_small_100.lamb_in1k\n",
-      "Generated 13 triples from 4 entities\n",
+      "=== ONTOLOGY-AWARE TRIPLE GENERATION STARTED ===\n",
+      "Uploading MCRO ontology...\n",
+      "Ontology uploaded: files/qjwrxu4xzdae\n",
+      "Gemini error: 500 Internal error encountered.\n",
+      "No triples returned for timm/mobilenetv3_small_100.lamb_in1k\n",
+      "Processed 2/10: sentence-transformers/all-MiniLM-L6-v2\n",
+      "Generated 14 triples\n",
+      "Gemini error: 500 Internal error encountered.\n",
+      "No triples returned for Falconsai/nsfw_image_detection\n",
+      "Processed 4/10: dima806/fairface_age_image_detection\n",
+      "Generated 18 triples\n",
+      "Processed 5/10: google-bert/bert-base-uncased\n",
+      "Generated 10 triples\n",
       "Processed 6/10: openai/clip-vit-large-patch14\n",
-      "Generated 121 triples from 6 entities\n",
+      "Generated 20 triples\n",
+      "Gemini error: 500 Internal error encountered.\n",
+      "No triples returned for TheBloke/phi-2-GGUF\n",
+      "Processed 8/10: facebook/esmfold_v1\n",
+      "Generated 10 triples\n",
+      "Processed 9/10: amazon/chronos-t5-small\n",
+      "Generated 13 triples\n",
+      "Processed 10/10: Bingsu/adetailer\n",
+      "Generated 13 triples\n",
       "\n",
-      "=== STATISTICS ===\n",
-      "Total models processed: 10\n",
-      "Total triples generated: 392\n",
+      "✅ Saved 98 triples to extracted_triples.json\n",
       "\n",
-      "=== COMPLETED ===\n",
-      "Final triple count: 392\n"
+      "=== COMPLETED ===\n"
      ]
     }
    ],
@@ -29,164 +44,122 @@
     "from huggingface_hub import HfApi, ModelCard\n",
     "import json\n",
     "import re\n",
-    "import pandas as pd\n",
     "import google.generativeai as genai\n",
+    "from rdflib import Graph, Namespace, URIRef, Literal, RDF\n",
     "\n",
-    "# Authentication\n",
-    "HFTOKEN = \"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\"\n",
+    "# Configuration\n",
     "GTOKEN = \"AIzaSyCLwWkDW03zjzVKUQf3ui5wgcreVJdsMbw\"\n",
+    "HFTOKEN = \"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\"\n",
+    "MCRO_TTL_PATH = \"mcro.ttl\"\n",
+    "OUTPUT_JSON_PATH = \"extracted_triples.json\"\n",
     "\n",
-    "processed_classes = set()\n",
+    "# Initialize Gemini\n",
+    "genai.configure(api_key=GTOKEN)\n",
+    "gemini_model = genai.GenerativeModel('gemini-2.0-flash')\n",
     "\n",
     "def clean_identifier(text):\n",
-    "    \"\"\"Generate safe URI component\"\"\"\n",
-    "    if pd.isna(text) or text in ['None', 'nan']:\n",
-    "        return \"unknown\"\n",
-    "    return re.sub(r'[^a-zA-Z0-9]', '', str(text).replace(' ', ''))[:50]\n",
+    "    \"\"\"Generate safe identifier\"\"\"\n",
+    "    return re.sub(r'[^a-zA-Z0-9]', '', str(text).replace(\" \", \"\"))[:50]\n",
     "\n",
-    "def get_dynamic_mapping(entity_key):\n",
-    "    \"\"\"Generate ontology mappings with base URI\"\"\"\n",
-    "    clean_key = ''.join([w.capitalize() for w in re.split('[^a-zA-Z0-9]', entity_key)])\n",
-    "    return {\n",
-    "        \"class_uri\": f\"http://purl.obolibrary.org/obo/mcro.owl#{clean_key}\",\n",
-    "        \"predicate_uri\": f\"http://purl.obolibrary.org/obo/mcro.owl#has{clean_key}\"\n",
-    "    }\n",
-    "\n",
-    "def extract_hf_entities(text):\n",
+    "def upload_mcro_ontology():\n",
+    "    \"\"\"Upload .ttl ontology to Gemini\"\"\"\n",
     "    try:\n",
-    "        prompt = f\"\"\"Extract metadata strictly using terms defined in the MCRO Ontology:\n",
-    "        http://purl.obolibrary.org/obo/mcro.owl\n",
-    "        \n",
-    "Include only entities that clearly correspond to existing MCRO classes or properties.\n",
-    "Avoid adding new or ad-hoc terms. Use exact labels from the ontology where applicable.\n",
+    "        print(\"Uploading MCRO ontology...\")\n",
+    "        mcro_file = genai.upload_file(path=MCRO_TTL_PATH)\n",
+    "        print(f\"Ontology uploaded: {mcro_file.name}\")\n",
+    "        return mcro_file\n",
+    "    except Exception as e:\n",
+    "        print(f\"File upload failed: {e}\")\n",
+    "        raise\n",
     "\n",
-    "Valid categories include: Model, Dataset, Metric, TrainingProcedure, EvaluationResult, Configuration, etc.\n",
+    "def get_mapped_triples(model_card_text, mcro_file, model_id):\n",
     "\n",
-    "Return a valid JSON object ONLY, no explanation. Example:\n",
-    "{{\"dataset\": \"Wikipedia\", \"architecture\": \"Transformer\"}}\n",
+    "    prompt = f\"\"\"Using the attached MCRO ontology file ({mcro_file.uri}), analyze this Hugging Face model card and return:\n",
     "\n",
-    "Model card text:\n",
-    "{text[:10000]}\"\"\"\n",
+    "1. All metadata fields (like license, description, tags, dataset, etc.)\n",
+    "2. Map each to appropriate MCRO ontology concepts using exact CURIE syntax\n",
+    "   - Example CURIE: mcro:HasLicense\n",
+    "3. Return ONLY a JSON array of triples in this format:\n",
+    "[\n",
+    "  {{\n",
+    "    \"s\": \"mcro:{clean_identifier(model_id)}\",\n",
+    "    \"p\": \"rdf:type\",\n",
+    "    \"o\": \"mcro:Model\"\n",
+    "  }},\n",
+    "  {{\n",
+    "    \"s\": \"mcro:{clean_identifier(model_id)}\",\n",
+    "    \"p\": \"mcro:HasLicense\",\n",
+    "    \"o\": \"mcro:{clean_identifier(model_id)}-License\"\n",
+    "  }},\n",
+    "  {{\n",
+    "    \"s\": \"mcro:{clean_identifier(model_id)}-License\",\n",
+    "    \"p\": \"rdf:type\",\n",
+    "    \"o\": \"mcro:License\"\n",
+    "  }},\n",
+    "  {{\n",
+    "    \"s\": \"mcro:{clean_identifier(model_id)}-License\",\n",
+    "    \"p\": \"prov:hasTextValue\",\n",
+    "    \"o\": \"mit\"\n",
+    "  }}\n",
+    "]\n",
+    "Important Rules:\n",
+    "- Only use terms from the ontology\n",
+    "- Use CURIE format (prefix:localname)\n",
+    "- Always link back to base namespace: http://sbmi.uth.edu/ontology/mcro#\n",
+    "- For literal values, use prov:hasTextValue\n",
+    "- No explanation or markdown\n",
+    "- Keep all responses strictly within JSON format\"\"\"\n",
     "\n",
-    "        genai.configure(api_key=GTOKEN)\n",
-    "        model = genai.GenerativeModel('gemini-2.0-flash')\n",
-    "        response = model.generate_content(prompt)\n",
+    "    try:\n",
+    "        response = gemini_model.generate_content(\n",
+    "            contents=[prompt, mcro_file],\n",
+    "            request_options={\"timeout\": 60}\n",
+    "        )\n",
     "\n",
-    "        # Extract JSON block\n",
+    "        # Extract & parse JSON\n",
     "        json_str = response.text.strip()\n",
     "        if \"```json\" in json_str:\n",
     "            json_str = json_str.split(\"```json\")[1].split(\"```\")[0].strip()\n",
-    "        \n",
-    "        # Basic JSON sanity check\n",
-    "        if not json_str.startswith(\"{\") or not json_str.endswith(\"}\"):\n",
-    "            raise ValueError(\"Invalid JSON structure\")\n",
     "\n",
-    "        # Try parsing directly\n",
     "        return json.loads(json_str)\n",
     "    \n",
-    "    except json.JSONDecodeError as je:\n",
-    "        print(f\"JSON Decode Error: {str(je)} - attempting repair\")\n",
-    "        try:\n",
-    "            # Attempt to fix common JSON issues\n",
-    "            json_str = re.sub(r',\\s*}', '}', json_str)  # remove trailing commas\n",
-    "            json_str = re.sub(r',\\s*]', ']', json_str)\n",
-    "            return json.loads(json_str)\n",
-    "        except Exception as je2:\n",
-    "            print(f\"Repair failed: {str(je2)}\")\n",
-    "            return {}\n",
-    "    \n",
     "    except Exception as e:\n",
-    "        print(f\"Extraction error: {str(e)}\")\n",
-    "        return {}\n",
-    "\n",
-    "def generate_hf_triples(model_data):\n",
-    "    \"\"\"Generate RDF triples with ontology alignment\"\"\"\n",
-    "    global processed_classes\n",
-    "    triples = []\n",
-    "    model_id = model_data.get('id', 'unknown')\n",
-    "    model_uri = f\"http://purl.obolibrary.org/obo/mcro.owl#{clean_identifier(model_id)}\"\n",
-    "    \n",
-    "    # Base model type assertion\n",
-    "    triples.append({\n",
-    "        \"s\": model_uri,\n",
-    "        \"p\": \"rdf:type\",\n",
-    "        \"o\": \"http://purl.obolibrary.org/obo/mcro.owl#Model\"\n",
-    "    })\n",
-    "\n",
-    "    if \"entities\" not in model_data:\n",
-    "        return triples\n",
-    "\n",
-    "    for key, value in model_data[\"entities\"].items():\n",
-    "        if not value or key.lower() in {'id', 'model'}:\n",
-    "            continue\n",
-    "\n",
-    "        mapping = get_dynamic_mapping(key)\n",
-    "        values = value if isinstance(value, list) else [value]\n",
-    "\n",
-    "        for val in values:\n",
-    "            if pd.isna(val) or str(val).lower() in {'none', 'null', 'nan'}:\n",
-    "                continue\n",
-    "\n",
-    "            # Create entity URI based on key only\n",
-    "            entity_uri = f\"{model_uri}-{clean_identifier(key)}\"\n",
-    "            \n",
-    "            # Add core triples\n",
-    "            triples.extend([\n",
-    "                {\"s\": model_uri, \"p\": mapping['predicate_uri'], \"o\": entity_uri},\n",
-    "                {\"s\": entity_uri, \"p\": \"rdf:type\", \"o\": mapping['class_uri']},\n",
-    "                {\"s\": entity_uri, \"p\": \"dul:hasParameterDataValue\", \"o\": str(val)}\n",
-    "            ])\n",
-    "            \n",
-    "            # Add class hierarchy once per class\n",
-    "            if mapping['class_uri'] not in processed_classes:\n",
-    "                triples.append({\n",
-    "                    \"s\": mapping['class_uri'],\n",
-    "                    \"p\": \"rdfs:subClassOf\",\n",
-    "                    \"o\": \"http://purl.obolibrary.org/obo/mcro.owl#Component\"\n",
-    "                })\n",
-    "                processed_classes.add(mapping['class_uri'])\n",
-    "\n",
-    "    return triples\n",
+    "        print(f\"Gemini error: {e}\")\n",
+    "        return []\n",
     "\n",
     "def process_huggingface_models(limit=10):\n",
-    "    \"\"\"Process models and generate RDF triples\"\"\"\n",
+    "    \"\"\"Main pipeline with single-prompt mapping\"\"\"\n",
+    "    mcro_file = upload_mcro_ontology()\n",
     "    api = HfApi(token=HFTOKEN)\n",
     "    models = list(api.list_models(sort=\"downloads\", direction=-1, limit=limit))\n",
     "    all_triples = []\n",
     "\n",
-    "    for idx, model in enumerate(models):\n",
+    "    for idx, model_info in enumerate(models):\n",
     "        try:\n",
-    "            card = ModelCard.load(model.modelId, token=HFTOKEN)\n",
-    "            entities = extract_hf_entities(card.text)\n",
+    "            card = ModelCard.load(model_info.id, token=HFTOKEN)\n",
+    "            triples = get_mapped_triples(card.text, mcro_file, model_info.id)\n",
     "            \n",
-    "            if not entities:\n",
-    "                print(f\"Skipping {model.modelId} - no entities found\")\n",
-    "                continue\n",
-    "\n",
-    "            model_data = {\"id\": model.modelId, \"entities\": entities}\n",
-    "            triples = generate_hf_triples(model_data)\n",
-    "            all_triples.extend(triples)\n",
-    "\n",
-    "            if idx % 5 == 0:\n",
-    "                print(f\"Processed {idx+1}/{len(models)}: {model.modelId}\")\n",
-    "                print(f\"Generated {len(triples)} triples from {len(entities)} entities\")\n",
+    "            if triples:\n",
+    "                all_triples.extend(triples)\n",
+    "                print(f\"Processed {idx+1}/{len(models)}: {model_info.id}\")\n",
+    "                print(f\"Generated {len(triples)} triples\")\n",
+    "            else:\n",
+    "                print(f\"No triples returned for {model_info.id}\")\n",
     "\n",
     "        except Exception as e:\n",
-    "            print(f\"Error processing {model.modelId}: {str(e)}\")\n",
+    "            print(f\"Error processing {model_info.id}: {str(e)}\")\n",
     "\n",
-    "    with open(\"extracted_triples.json\", \"w\") as f:\n",
+    "    # Save results\n",
+    "    with open(OUTPUT_JSON_PATH, \"w\") as f:\n",
     "        json.dump(all_triples, f, indent=2)\n",
     "\n",
-    "    print(\"\\n=== STATISTICS ===\")\n",
-    "    print(f\"Total models processed: {len(models)}\")\n",
-    "    print(f\"Total triples generated: {len(all_triples)}\")\n",
+    "    print(f\"\\n✅ Saved {len(all_triples)} triples to {OUTPUT_JSON_PATH}\")\n",
     "    return all_triples\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    print(\"=== TRIPLE GENERATION STARTED ===\")\n",
-    "    triples = process_huggingface_models(limit=10)\n",
-    "    print(\"\\n=== COMPLETED ===\")\n",
-    "    print(f\"Final triple count: {len(triples)}\")"
+    "    print(\"=== ONTOLOGY-AWARE TRIPLE GENERATION STARTED ===\")\n",
+    "    process_huggingface_models(limit=10)\n",
+    "    print(\"\\n=== COMPLETED ===\")"
    ]
   }
  ],
