--- a/triple_creation.ipynb
+++ b/triple_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "6e797a6f-09e2-4d91-b375-7fe3993600bf",
    "metadata": {},
    "outputs": [
@@ -12,29 +12,29 @@
      "text": [
       "=== ONTOLOGY-AWARE TRIPLE GENERATION STARTED ===\n",
       "Uploading MCRO ontology...\n",
-      "Ontology uploaded: files/qjwrxu4xzdae\n",
-      "Gemini error: 500 Internal error encountered.\n",
-      "No triples returned for timm/mobilenetv3_small_100.lamb_in1k\n",
+      "Ontology uploaded: files/5synbpf1kncd\n",
+      "Processed 1/10: timm/mobilenetv3_small_100.lamb_in1k\n",
+      "Generated 4 triples\n",
       "Processed 2/10: sentence-transformers/all-MiniLM-L6-v2\n",
-      "Generated 14 triples\n",
-      "Gemini error: 500 Internal error encountered.\n",
-      "No triples returned for Falconsai/nsfw_image_detection\n",
+      "Generated 13 triples\n",
+      "Processed 3/10: Falconsai/nsfw_image_detection\n",
+      "Generated 13 triples\n",
       "Processed 4/10: dima806/fairface_age_image_detection\n",
-      "Generated 18 triples\n",
+      "Generated 8 triples\n",
       "Processed 5/10: google-bert/bert-base-uncased\n",
-      "Generated 10 triples\n",
+      "Generated 8 triples\n",
       "Processed 6/10: openai/clip-vit-large-patch14\n",
-      "Generated 20 triples\n",
-      "Gemini error: 500 Internal error encountered.\n",
-      "No triples returned for TheBloke/phi-2-GGUF\n",
+      "Generated 1 triples\n",
+      "Processed 7/10: TheBloke/phi-2-GGUF\n",
+      "Generated 4 triples\n",
       "Processed 8/10: facebook/esmfold_v1\n",
-      "Generated 10 triples\n",
+      "Generated 16 triples\n",
       "Processed 9/10: amazon/chronos-t5-small\n",
       "Generated 13 triples\n",
       "Processed 10/10: Bingsu/adetailer\n",
-      "Generated 13 triples\n",
+      "Generated 16 triples\n",
       "\n",
-      "✅ Saved 98 triples to extracted_triples.json\n",
+      "✅ Saved 96 triples to extracted_triples.json\n",
       "\n",
       "=== COMPLETED ===\n"
      ]
