--- a/triple_creation.ipynb
+++ b/triple_creation.ipynb
@@ -2,39 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "6e797a6f-09e2-4d91-b375-7fe3993600bf",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/v/Documents/Thesis/automation-model-cards/.venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n",
+      "/Users/v/Documents/Thesis/automation-model-cards/.venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "=== ONTOLOGY-AWARE TRIPLE GENERATION STARTED ===\n",
       "Uploading MCRO ontology...\n",
-      "Ontology uploaded: files/5synbpf1kncd\n",
+      "Ontology uploaded: files/k8xrgqn9w9a6\n",
       "Processed 1/10: timm/mobilenetv3_small_100.lamb_in1k\n",
       "Generated 4 triples\n",
       "Processed 2/10: sentence-transformers/all-MiniLM-L6-v2\n",
-      "Generated 13 triples\n",
+      "Generated 8 triples\n",
       "Processed 3/10: Falconsai/nsfw_image_detection\n",
-      "Generated 13 triples\n",
+      "Generated 3 triples\n",
       "Processed 4/10: dima806/fairface_age_image_detection\n",
-      "Generated 8 triples\n",
+      "Generated 11 triples\n",
       "Processed 5/10: google-bert/bert-base-uncased\n",
-      "Generated 8 triples\n",
-      "Processed 6/10: openai/clip-vit-large-patch14\n",
-      "Generated 1 triples\n",
-      "Processed 7/10: TheBloke/phi-2-GGUF\n",
       "Generated 4 triples\n",
+      "Processed 6/10: openai/clip-vit-large-patch14\n",
+      "Generated 4 triples\n",
+      "Processed 7/10: TheBloke/phi-2-GGUF\n",
+      "Generated 10 triples\n",
       "Processed 8/10: facebook/esmfold_v1\n",
-      "Generated 16 triples\n",
+      "Generated 10 triples\n",
       "Processed 9/10: amazon/chronos-t5-small\n",
-      "Generated 13 triples\n",
+      "Generated 17 triples\n",
       "Processed 10/10: Bingsu/adetailer\n",
-      "Generated 16 triples\n",
+      "Generated 21 triples\n",
       "\n",
-      "✅ Saved 96 triples to extracted_triples.json\n",
+      "✅ Saved 92 triples to extracted_triples.json\n",
       "\n",
       "=== COMPLETED ===\n"
      ]
